<resources>
    <string name="app_name">SmartSkate</string>
    <string name="text_splash">SmartSkate</string>
    <string name="text_login">进入</string>
    <string name="text_now_login">正在登陆</string>
    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
    <string name="tv_tuijian">专场推荐</string>
    <string name="tv_shangping">好产品不贵</string>
    <string name="textview_yds">胰岛素</string>
    <string name="text_led">LED</string>
    <string name="text_check">check</string>
    <string name="text_speed">speed</string>
    <string name="text_battery">battery</string>
    <string name="tv_0000km">0 0 0 0</string>
    <string name="tv_20">20</string>
    <string name="tv_00">00</string>
    <string name="tv_tuoluoyi">陀螺仪</string>
    <string name="tv_right">正常</string>
    <string name="tv_kongzhiqi">控制器</string>
    <string name="tv_dianji">电机</string>
    <string name="tv_wuxiankongzhi">无线控制</string>
    <string name="tv_chumokaiguan">触摸开关</string>
    <string name="tv_dianyuan">电源</string>
    <string name="tv_0000">00%</string>
    <string name="tv_bletitle">BLE设备</string>
    <string name="equipmentLink">设备已连接</string>
    <string name="temperature">27</string>
    <string name="text_one">适驾指数</string>
    <string name="text_two">℃</string>
    <string name="battery">剩余电量</string>
    <string name="battery_percent">50</string>
    <string name="percent">%</string>
    <string name="tv_km">预计里程</string>
    <string name="km">32km</string>
    <string name="time">时间</string>
    <string name="_60">60分钟</string>
    <string name="carCheck">车辆检测</string>
    <string name="check">健康</string>
    <string name="_3">3天</string>
    <string name="energy">能量回收</string>
    <string name="good">强</string>
    <string name="tv_three">距离上次检测已有</string>
    <string name="light">灯光设置</string>
    <string name="light_color">蓝色灯</string>
    <string name="style">个性设置</string>
    <string name="reary_go">REARY GO</string>
    <string name="tv_ble_title">BLE</string>
    <string name="bt_ble_search">搜索设备</string>
    <string name="bt_ble_connect">连接设备</string>
    <string name="btn_uuid">分解UUID</string>
</resources>
