<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:src="@mipmap/check_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/check_bg_one" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="6dp"
                android:src="@mipmap/check_bg_two" />
            <TextView
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_black"
                android:text="@string/tv_tuoluoyi"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_check_one"
                android:layout_marginLeft="160dp"
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/tv_right"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/check_bg_one" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="6dp"
                android:src="@mipmap/check_bg_two" />
            <TextView
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_black"
                android:text="@string/tv_kongzhiqi"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_check_two"
                android:layout_marginLeft="160dp"
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/tv_right"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/check_bg_one" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="6dp"
                android:src="@mipmap/check_bg_two" />
            <TextView
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_black"
                android:text="@string/tv_dianji"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_check_three"
                android:layout_marginLeft="160dp"
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/tv_right"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/check_bg_one" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="6dp"
                android:src="@mipmap/check_bg_two" />
            <TextView
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_black"
                android:text="@string/tv_wuxiankongzhi"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_check_four"
                android:layout_marginLeft="160dp"
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/tv_right"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/check_bg_one" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="6dp"
                android:src="@mipmap/check_bg_two" />
            <TextView
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_black"
                android:text="@string/tv_chumokaiguan"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_check_five"
                android:layout_marginLeft="160dp"
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/tv_right"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/check_bg_one" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="6dp"
                android:src="@mipmap/check_bg_two" />
            <TextView
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_black"
                android:text="@string/tv_dianyuan"
                android:layout_width="160dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_check_six"
                android:layout_marginLeft="160dp"
                android:paddingTop="11dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/tv_right"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>